--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Hello world!</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil aperiam perferendis repellendus voluptate? Voluptates ullam error molestiae iusto adipisci accusantium voluptate, veritatis, aspernatur dignissimos excepturi provident numquam eaque exercitationem dicta.</p>
-</body>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+
+  <body>
+    <header>
+      <h1>Hello world!</h1>
+    </header>
+    <main>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil aperiam
+        perferendis repellendus voluptate? Voluptates ullam error molestiae
+        iusto adipisci accusantium voluptate, veritatis, aspernatur dignissimos
+        excepturi provident numquam eaque exercitationem dicta.
+      </p>
+
+      <p>this is added and this and this</p>
+      <a href="about.html">About</a>
+    </main>
+  </body>
 </html>
